--- a/package.json
+++ b/package.json
@@ -37,5 +37,10 @@
         "tailwindcss": "^3.3.2",
         "typescript": "^5.1.3",
         "vite": "^4.3.2"
+    },
+    "overrides": {
+        "react-scripts": {
+            "typescript": "^5"
+        }
     }
 }
